--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ members = [
     "crates/hacker_news",
     "crates/github",
     "crates/orchestrator",
-    # "crates/arxiv",
+    "crates/arxiv",
     # "crates/scheduler", # optional
 ]
 
