--- a/crates/orchestrator/Cargo.toml
+++ b/crates/orchestrator/Cargo.toml
@@ -12,3 +12,4 @@ dotenv = "0.15"
 
 github = { path = "../github" }
 hacker_news = { path = "../hacker_news" }
+custom_site = { path = "../custom_site" }
