--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 GEMINI_API_KEY=your_gemini_api_key
+XAI_API_KEY=your_xai_api_key
 SUPABASE_URL=your_supabase_url
 SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 SUPABASE_BUCKET_NAME=your_supabase_bucket_name
