--- a/crates/hacker_news/Cargo.toml
+++ b/crates/hacker_news/Cargo.toml
@@ -14,3 +14,4 @@ time = "0.3"
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
+common = { path = "../common" }
