--- a/crates/xai_search/Cargo.toml
+++ b/crates/xai_search/Cargo.toml
@@ -12,4 +12,5 @@ serde_json = "1.0"
 time = { version = "0.3", features = ["macros"] }
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 tracing = "0.1"
+common = { path = "../common" }
 
