Update README with build and run instructions

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ SUPABASE_URL=your_supabase_url
 SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 SUPABASE_BUCKET_NAME=your_supabase_bucket_name
 LANGUAGES=rust,python,typescript
+CUSTOM_SITE_URL=https://example.com
